# docker-container-metrics

./: Cargo.toml  Docker.linux.dockerfile  Docker.local.dockerfile  README.md  docker-bake.hcl  docker-compose.yml
.github/scripts/: multiarch-manifest.py
.github/workflows/: docker-container-metrics.yml
src/: main.rs
test/: Dockerfile  docker-bake.hcl
