[package]
name = "docker-metrics-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.17.1"
chrono = "0.4.38"
env_logger = "0.11.5"
futures = "0.3.31"
futures-util = "0.3.31"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"] }
log = { version = "0.4.22", features = [] }
